added a few lines to report

--- a/report/a day.tex
+++ b/report/a day.tex
@@ -32,6 +32,7 @@ Yunjey's model involves concatenating the image and the captions as input during
 \subsection{Alternative model}
 \subsubsection{Version 1: Image as Hidden State}
 This alternative model we propose is different in where the input from the encoder is fed into the network via the hidden state, and the input is simply a start token at the start. During training, the correct words from the $t_{-1}$ time step are fed into the input so as to guide the network into learning the relationship between the words appearances and the input hidden state. This was however a mistake on our part, as it leads to inefficient memory space usage. It is possible that feeding it into the hidden state at the start and expecting that the hidden state outputs the relevant output means that parameters have to be wasted, focused on translating the relevant information into the cell state instead of the approximating the correct word into the output hidden state for the next cycle as opposed to purely basing itself off the existing cell states. In other words, we placed the data into the output area (hidden state)instead of the vector that was directly reserved for memory (cell state). While the neural network was able to adapt, it might have impacted performances negatively.
+\paragraph{} Of note is that we did not manage to implement the training phase correctly for the model. The mistake was only noticed during the twelfth epoch, where we noticed that loss was at an all time low and accuracy was peaking at 75\% that samples were still turning up with the same top values of the same word. Utilising categorical sampling as an additional measure to see if the model was somehow predicting the right words, we realised to our abject horror we had been feeding in the training and validation inputs incorrectly, with the target word always being the input word for any time step. We also realised we had been feeding the input from the encoder into the hidden state instead of the cell state, whereupon we promptly decided to try version 2 of the model instead, since it seemed to make more sense.
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{image_as_hidden.png}
 \end{figure}
