Edited README and report

--- a/report/a day.tex
+++ b/report/a day.tex
@@ -119,6 +119,9 @@ nltk.download('punkt')
 \end{lstlisting}
 In your python file (NOT IN SHELL)
 \item Torch - version 1.0.0
+\item TorchVision - version 0.2.2
+\item Pillow
+\item json
 \item Python 3.6.8
 \end{enumerate}
 
